--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@ name: Build OpenCV for iOS
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "opencv" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-    name: Build OpenCV xcframework
+    name: Build OpenCV XCFramework
     runs-on: macOS-12
     env:
       OCV_VER: 4.6.0
@@ -20,11 +20,11 @@ jobs:
           xcode-select -p
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - name: Prepare Cache Key
         run: |
           echo "https://github.com/opencv/opencv/archive/refs/tags/${OCV_VER}.tar.gz" >> cache_key.txt
-          
+
       - name: Cache Downloads
         id: cache-downloads
         uses: actions/cache@v3
@@ -38,16 +38,17 @@ jobs:
         run: |
             mkdir -p ./cache
             curl -o ./cache/opencv-${OCV_VER}.tar.gz -L "https://github.com/opencv/opencv/archive/refs/tags/${OCV_VER}.tar.gz"
+
       - name: Extract OpenCV
         run: |
           tar xf ./cache/opencv-${OCV_VER}.tar.gz
           ls -l
+
       - name: Build OpenCV
         run: |
           python3 opencv-${OCV_VER}/platforms/apple/build_xcframework.py \
                   --framework_name opencv2 \
-                  --out ./opencv-build \
-                  --iphonesimulator_archs x86_64,arm64 \
+                  --iphonesimulator_archs i386,x86_64,arm64 \
                   --iphoneos_archs arm64 \
                   --build_only_specified_archs \
                   --without calib3d \
@@ -56,9 +57,9 @@ jobs:
                   --without flann \
                   --without gapi \
                   --without highgui \
-                  --without imgcodecs \
                   --without java \
                   --without js \
+                  --without legacy \
                   --without ml \
                   --without objc \
                   --without objdetect \
@@ -68,17 +69,20 @@ jobs:
                   --without ts \
                   --without video \
                   --without videoio \
-                  --without world
-      - name: Zip xcframework
+                  --without videostab \
+                  --without world \
+                  --out ./opencv-build
+
+      - name: Zip XCFramework
         run: |
-          cd ./opencv-build 
+          cd ./opencv-build
           zip -r opencv-ios-${OCV_VER}.zip opencv2.xcframework
           ls -l
           du -sh opencv-ios-${OCV_VER}.zip
-          
+
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
-        with:        
+        with:
           retention-days: 90
           if-no-files-found: error
           path:
