--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,9 +48,11 @@ jobs:
         run: |
           python3 opencv-${OCV_VER}/platforms/apple/build_xcframework.py \
                   --framework_name opencv2 \
-                  --iphonesimulator_archs i386,x86_64,arm64 \
+                  --iphonesimulator_archs arm64,x86_64 \
                   --iphoneos_archs arm64 \
                   --build_only_specified_archs \
+                  --dynamic \
+                  --disable-bitcode \
                   --without calib3d \
                   --without dnn \
                   --without features2d \
