--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: macOS-12
     env:
       OCV_VER: 4.6.0
+      BUILD: build
 
     steps:
       - name: Tools report
@@ -46,34 +47,18 @@ jobs:
 
       - name: Build OpenCV
         run: |
-          python3 opencv-${OCV_VER}/platforms/apple/build_xcframework.py \
-                  --framework_name opencv2 \
-                  --iphonesimulator_archs arm64,x86_64 \
-                  --iphoneos_archs arm64 \
-                  --build_only_specified_archs \
-                  --dynamic \
-                  --disable-bitcode \
-                  --without calib3d \
-                  --without dnn \
-                  --without features2d \
-                  --without flann \
-                  --without gapi \
-                  --without highgui \
-                  --without java \
-                  --without js \
-                  --without legacy \
-                  --without ml \
-                  --without objc \
-                  --without objdetect \
-                  --without photo \
-                  --without python \
-                  --without stitching \
-                  --without ts \
-                  --without video \
-                  --without videoio \
-                  --without videostab \
-                  --without world \
-                  --out ./opencv-build
+          rm -rf ${{ BUILD }}
+          python3 platforms/apple/build_xcframework.py --out ${{ BUILD }} \
+          --dynamic --disable-bitcode --iphoneos_deployment_target 11 \
+          --build_only_specified_archs --iphoneos_archs arm64 --iphonesimulator_archs arm64,x86_64 \
+          --without calib3d --without dnn --without features2d --without flann --without gapi --without highgui \
+          --without java --without js --without ml --without nonfree --without objdetect --without objc --without photo \
+          --without python --without stitching --without ts --without video --without videoio --without videostab
+          rm -rf ${{ BUILD }}/opencv2.xcframework ; mkdir -p ${{ BUILD }}/opencv2.xcframework/Headers/opencv2 dev sym
+          cp ${{ BUILD }}/iphoneos/opencv2.framework/opencv2 dev/opencv2.dylib
+          cp ${{ BUILD }}/iphonesimulator/opencv2.framework/opencv2 sym/opencv2.dylib
+          cp -r ${{ BUILD }}/iphoneos/opencv2.framework/Headers/* ${{ BUILD }}/opencv2.xcframework/Headers/opencv2
+          xcodebuild -create-xcframework -library dev/opencv2.dylib -library sym/opencv2.dylib -output ${{ BUILD }}/opencv2.xcframework
 
       - name: Zip XCFramework
         run: |
