--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,23 +42,22 @@ jobs:
       - name: Extract OpenCV
         run: |
           tar xf ./cache/opencv-${OCV_VER}.tar.gz
+          ls -l
 
       - name: Build OpenCV
-        env:
-          BUILD_DIR: xcfrmwrk
         run: |
-          rm -rf ${{ env.BUILD_DIR }}
-          python3 platforms/apple/build_xcframework.py --out ${{ env.BUILD_DIR }} \
+          rm -rf build
+          python3 platforms/apple/build_xcframework.py --out build \
           --dynamic --disable-bitcode --iphoneos_deployment_target 11 \
           --build_only_specified_archs --iphoneos_archs arm64 --iphonesimulator_archs arm64,x86_64 \
           --without calib3d --without dnn --without features2d --without flann --without gapi --without highgui \
           --without java --without js --without ml --without nonfree --without objdetect --without objc --without photo \
           --without python --without stitching --without ts --without video --without videoio --without videostab
-          rm -rf ${{ env.BUILD_DIR }}/opencv2.xcframework ; mkdir -p ${{ env.BUILD_DIR }}/opencv2.xcframework/Headers/opencv2 dev sym
-          cp ${{ env.BUILD_DIR }}/iphoneos/opencv2.framework/opencv2 dev/opencv2.dylib
-          cp ${{ env.BUILD_DIR }}/iphonesimulator/opencv2.framework/opencv2 sym/opencv2.dylib
-          cp -r ${{ env.BUILD_DIR }}/iphoneos/opencv2.framework/Headers/* ${{ env.BUILD_DIR }}/opencv2.xcframework/Headers/opencv2
-          xcodebuild -create-xcframework -library dev/opencv2.dylib -library sym/opencv2.dylib -output ${{ env.BUILD_DIR }}/opencv2.xcframework
+          rm -rf build/opencv2.xcframework ; mkdir -p build/opencv2.xcframework/Headers/opencv2 dev sym
+          cp build/iphoneos/opencv2.framework/opencv2 dev/opencv2.dylib
+          cp build/iphonesimulator/opencv2.framework/opencv2 sym/opencv2.dylib
+          cp -r build/iphoneos/opencv2.framework/Headers/* build/opencv2.xcframework/Headers/opencv2
+          xcodebuild -create-xcframework -library dev/opencv2.dylib -library sym/opencv2.dylib -output build/opencv2.xcframework
 
       - name: Zip XCFramework
         run: |
